# nnlib

./: CMakeLists.txt
include/nnlib/core/: tensor.hpp
include/nnlib/math/: math.hpp
test/core/: test_tensor.hpp
